New Product list
Changes made to how product list is displayed.

--- a/DownloadWindow.xaml
+++ b/DownloadWindow.xaml
@@ -1,34 +1,34 @@
-﻿<Window x:Class="QBasket_demo.ConfirmItemsWin"
+﻿<Window x:Class="QBasket_demo.DownloadWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QBasket_demo"
         mc:Ignorable="d"
-        x:Name="QBasketConfirmItems"
-        DataContext="MainWindow"
         Title="Q Basket"
-        Closing="QBasketConfirmItems_Closing"
-
+        Name="QBasketFormatWin"
+        Closing="QBasketFormatWin_Closing"
+        
         Background="#DFEBF4"
         FontFamily="Montserrat"
         FontSize="10"
-
+        
         WindowStyle="SingleBorderWindow"
         WindowStartupLocation="Manual"
         Width="365"
         Height="535"
         ResizeMode="NoResize"
         AllowsTransparency="False">
-
+    
     <Window.Style>
         <Style TargetType="{x:Type Window}">
             <Setter Property="WindowState" Value="Normal" />
             <Setter Property="WindowStyle" Value="SingleBorderWindow" />
         </Style>
     </Window.Style>
-
+    
     <Window.Resources>
+
         <Color x:Key="QuarticNavy"
                R="12" G="48" B="124" />
         <!-- #0C307C -->
@@ -121,7 +121,6 @@
             <Setter Property="Background"
                 Value="White" />
         </Style>
-
         <Style x:Key="TitleLabel"
             TargetType="Label">
             <Setter Property="FontWeight"
@@ -160,35 +159,31 @@
             <Grid.RowDefinitions>
                 <!--Row 0 - Title Label -->
                 <RowDefinition Height="25" MaxHeight="25" />
-                <!-- Row 1 - Selection summary -->
+                <!-- Row 1 - Summary Panel -->
                 <RowDefinition Height="30" MaxHeight="30" />
-                <!-- Row 2 - Item list panel -->
-                <RowDefinition Height="350" MaxHeight="350" />
-                <!-- Row 3 - Button Panel -->
-                <RowDefinition Height="50" MaxHeight="50" />
-                <!-- Row 3 - Button Panel -->
-                <RowDefinition Height="50" MaxHeight="50" />
-                <!-- Row 4 - Logo Button -->
-                <RowDefinition Height="40" MaxHeight="40" />
+                <!-- Row 2 - Download list panel -->
+                <RowDefinition Height="250" MaxHeight="250" />
+                <!-- Row 3 - output Options -->
+                <RowDefinition Height="Auto"/>
+                <!-- Row 4 - Button Panel -->
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
             <!-- Row 0 - Title Label -->
-            <Label x:Name="ConfirmTitle"
+            <Label x:Name="OutputTitle"
                    Style="{StaticResource TitleLabel}"
-                   Grid.Column="0"
                    Grid.Row="0"
                    HorizontalAlignment="Left"
                    Width="500"
-                   Content="CONFIRM SELECTED IMAGERY"/>
+                   Content="IMAGERY DOWNLOAD"/>
 
             <!-- Row 1 - Summary Panel -->
             <StackPanel Grid.Row="1"
-                        Grid.Column="0"
                         Grid.ColumnSpan="2"
                         Orientation="Horizontal"
                         VerticalAlignment="Center">
 
-                <Label x:Name="SummaryLbl"
+                <Label x:Name="OutSummaryLbl"
                        Style="{StaticResource PanelLabel}"
                        HorizontalAlignment="Left"
                        FontWeight="SemiBold"
@@ -197,109 +192,136 @@
                 <Label Content="# of Items"
                        Style="{StaticResource PanelLabel}"
                        Margin="10,0,0,0"/>
-                <TextBlock x:Name="NumItems"
-                           Style="{StaticResource ElementText}"
-                           FontSize="11"
-                           Background="#DFEBF4"
-                           Text="0"/>
+
+                <TextBlock x:Name="Out_NumItems" 
+                            Style="{StaticResource ElementText}"
+                            FontSize="11"
+                            Background="#DFEBF4"
+                            Text="0"/>
 
                 <Label Content="Total Size"
-                        Style="{StaticResource PanelLabel}"/>
-                <TextBlock x:Name="TotalSize"
+                       Style="{StaticResource PanelLabel}"/>
+                <TextBlock x:Name="Out_TotalSize" 
                             Style="{StaticResource ElementText}"
                             FontSize="11"
                             Background="#DFEBF4"
                             Text="0"/>
             </StackPanel>
 
-            <!-- Row 2 - Checkout List items -->
-            <Grid Grid.Row="2"
-                  Grid.Column="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="305" MaxWidth="305" />
-                    <ColumnDefinition Width="60" MaxWidth="60" />
-                </Grid.ColumnDefinitions>
+            <!-- Row 2 - Download List panel -->
+            <Grid Grid.Row="2">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="25" MaxHeight="25" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
                 <Label Style="{StaticResource PanelLabel}"
-                       Grid.Column="0"
                        Grid.Row="0"
-                       Grid.ColumnSpan="2"
                        VerticalContentAlignment="Center"
                        HorizontalAlignment="Left"
-                       Content="Select an item to delete it"/>
+                       Content="Items to be downloaded"/>
 
-                <ListBox  x:Name="ConfirmList"
-                          Height="300"
-                          Grid.Column="0"
-                          Grid.Row="1"
-                          Grid.ColumnSpan="2">
+                <ListBox  x:Name="OutList" 
+                          Height="225"
+                          Grid.Row="1">
                     <ListBox.ItemContainerStyle>
                         <Style TargetType="{x:Type ListBoxItem}">
-                            <Setter Property="IsSelected"
+                            <Setter Property="IsSelected" 
                                     Value="{Binding delete, Mode=OneWay}"/>
                         </Style>
                     </ListBox.ItemContainerStyle>
                     <ListBox.ItemTemplate>
                         <DataTemplate >
-                            <StackPanel Orientation="Horizontal">
-                                <CheckBox Content="{Binding name}"
-                                      IsChecked="{Binding delete}"/>
-                            </StackPanel>
+                            <Label Content="{Binding name}"/>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
             </Grid>
 
-            <!-- Row 3 -Update/Download Button Panel  -->
-            <StackPanel Orientation="Horizontal"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Grid.Row="3"
-                        Grid.Column="0">
-                <Button x:Name="DeleteBtn"
-                        Content="Delete"
-                        Height="20"
-                        Width="60"
-                        Margin="25,0"
-                        Click="DeleteBtn_Click"/>
-                <Button x:Name="Download"
-                        Content="Download"
-                        Height="20"
-                        Width="60"
-                        Margin="25,0"
-                        Click="Download_Click"/>
-                <Button x:Name="ReturnBtn"
-                        Content="Back"
-                        Height="20"
-                        Width="60"
-                        Margin="25,0"
-                        Click="Return_Click"/>
+            <!-- Row 3: Output Options -->
+            <StackPanel Grid.Row="3"
+                        Orientation="Vertical">
+
+                <!-- Local Label  -->
+                <Label Style="{StaticResource PanelLabel}"
+                       VerticalAlignment="Bottom"
+                       HorizontalAlignment="Left">
+                       Local Directory Options
+                </Label>
+
+                <!-- Local Image file -->
+                <StackPanel Orientation="Horizontal">
+                    <RadioButton x:Name="imageFileRB"
+                                 HorizontalAlignment="Left"
+                                 VerticalAlignment="Center"
+                                 IsChecked="True"
+                                 GroupName="FormatOptions"
+                                 Margin="10,0,0,0"/>
+
+                    <Label Style="{StaticResource ElementLabel}"
+                           HorizontalAlignment="Left"
+                           Margin="10,0,0,0">
+                           Geotiff image
+                    </Label>
+                </StackPanel>
+
+                <!-- AGOL Label -->
+                <StackPanel>
+                    <Label Style="{StaticResource PanelLabel}"
+                           Margin="0,10,0,0"
+                           VerticalAlignment="Bottom"
+                           HorizontalAlignment="Left">
+                    ArcGIS Online Options (requires an ArcGIS Online Account)
+                </Label>
+
+                <!-- KMZ File -->
+                    <StackPanel Orientation="Horizontal">
+                        <RadioButton x:Name="KMZ_file"
+                                     HorizontalAlignment="Left"
+                                     VerticalAlignment="Center"
+                                     GroupName="FormatOptions" 
+                                     Margin="10,0,0,0"/>
+
+                        <Label Style="{StaticResource ElementLabel}"
+                               HorizontalAlignment="Left">
+                            KMZ File
+                        </Label>
+                    </StackPanel>
+                </StackPanel>
             </StackPanel>
-            <Button x:Name="QuitBtn"
-                    Grid.Row="4"
-                    Content="Exit"
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Top"
-                    Height="20"
-                    Width="60"
-                    Margin="0,0,42.25,0"
-                    Click="Quit_Click"/>
+            
+            <!-- Row 4 - Button Panel -->
+            <StackPanel Orientation="Horizontal"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center"
+                        Grid.Row="4" 
+                        Margin="0,15,0,0">
+                <Button x:Name ="ContinueBtn"
+                        Margin="15"
+                        Content="Download"
+                        Width="50"
+                        Click="DownloadBtn_Click"/>
+                <Button x:Name ="CancelBtn"
+                        Margin="15"
+                        Width="50"
+                        Content="Cancel"
+                        Click="CancelBtn_Click"/>
+                <Button x:Name ="ExitBtn" 
+                        Width="50"
+                        Content="Exit"
+                        Margin="15"
+                                                Click="ExitBtn_Click"/>
+            </StackPanel>
 
-
-            <!-- Row 4 Quartic logo -->
-            <Image Source="QSolutions_small.png"
-                   Margin="0,5,5,5"
+            <!-- Row 5-Quartic logo 
+            <Image Source="QSolutions_small.png" 
                    Visibility="Collapsed"
                    Height="24"
+                   Margin="267,0,0,0"
                    Grid.Row="5"
-                   Grid.Column="0"
-                   HorizontalAlignment="Right"
-                   VerticalAlignment="Bottom"/>
-
+                   HorizontalAlignment="Left"
+                   VerticalAlignment="Center"/>
+            -->
         </Grid>
     </Border>
 </Window>
