--- a/AOI_Panel.xaml
+++ b/AOI_Panel.xaml
@@ -1,28 +1,16 @@
-﻿<Window x:Class="QBasket_demo.AOIWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:QBasket_demo"
-        mc:Ignorable="d"
-        Name="QAOIWindow"
-        Title="Q Basket"
-        DataContext="MainWindow"
-        Closing="QAOIWindow_Closing"
+﻿<UserControl x:Class="QBasket_demo.AOI_Panel"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:QBasket_demo"
+             mc:Ignorable="d"
+             d:DesignHeight="535" d:DesignWidth="315"
 
-        Background="#DFEBF4"
-        FontFamily="Montserrat"
-        FontSize="10"
-        Width="365"
-        Height="540"
-        WindowStartupLocation="Manual"
-        WindowStyle="SingleBorderWindow"
-        MinWidth="250"
-        ResizeMode="NoResize">
-
-    <!-- Margin : L T (R B) -->
-    <Window.Resources>
-
+             Background="#DFEBF4"
+             FontFamily="Montserrat"
+             FontSize="10">
+    <UserControl.Resources>
         <Color x:Key="QuarticNavy"
                R="12" G="48" B="124" />
         <!-- #0C307C -->
@@ -105,6 +93,8 @@
                     Value="1.0" />
             <Setter Property="Background"
                     Value="#EAEAEA"/>
+            <Setter Property="Height"
+                    Value="25"/>
         </Style>
 
         <Style x:Key="ElementText"
@@ -149,16 +139,15 @@
             <Setter Property="FontSize"
                 Value="10" />
         </Style>
-    </Window.Resources>
-
+    </UserControl.Resources>
+    
     <!-- Base window grid -->
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="183" />
-            <ColumnDefinition Width="182" />
+            <ColumnDefinition Width="157" />
+            <ColumnDefinition Width="158" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="25" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -178,44 +167,36 @@
                Style="{StaticResource TitleLabel}"
                Content="Area of Interest" />
 
-        <!-- Row 1 - Imagery titles -->
-        <Grid Grid.Row="1" Grid.Column="0"
-              Grid.ColumnSpan="2"
-              Margin="5,10,5,5">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="75"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Label Style="{StaticResource PanelLabel}"
-                   Content="Select Image"
-                   Grid.Column="0"
-                   VerticalAlignment="Center"/>
-            <ComboBox x:Name="ImageryTitle"
-                      Grid.Column="1"
-                      Width="250"
-                      SelectedIndex="0"
-                      Height="35"
-                      FontWeight="SemiBold"
+        <!-- Row 1 - Imagery title -->
+        <StackPanel Grid.Row="1"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="2"
+                    Orientation="Vertical">
 
-                      VerticalContentAlignment="Top"
-                      VerticalAlignment="Center"
-                      HorizontalAlignment="Stretch"
-                      Margin="0,0,25,0"
-                      SelectionChanged="ImageryTitle_SelectionChanged">
+            <Label Style="{StaticResource PanelLabel}"
+            Content="Select Image"
+                   Margin="5,5"/>
+            <ComboBox x:Name="ImageryTitle"
+
+                  Grid.ColumnSpan="2"
+                  SelectedIndex="0"
+                  Height="35"
+                  FontWeight="SemiBold"
+                  Margin="15,0,25,15"
+                  VerticalContentAlignment="Top"
+                  HorizontalAlignment="Stretch"
+                  SelectionChanged="ImageryTitle_SelectionChanged">
                 <ComboBox.ItemTemplate>
                     <DataTemplate DataType="wmts.layerTileSets">
                         <TextBlock Text="{Binding}"
-                                   FontSize="9"
-                                   MinWidth="100" />
+                               MinWidth="295" />
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
-        </Grid>
-
-        <!-- Row 5 - Extent panel -->
-        <Grid Grid.Row="5" Grid.Column="0"
-              Grid.ColumnSpan="2"
-              Margin="0,15">
+        </StackPanel>
+        <!-- Row 2 - Extent panel -->
+        <Grid Grid.Row="2" Grid.Column="0"
+              Grid.ColumnSpan="2">
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="50" />
@@ -235,70 +216,57 @@
                      Style="{StaticResource BlueTextbox}"
                      Margin="0,5,5,0"
                      SelectionChanged="Extent_Changed"
-                     Grid.Row="0" Grid.Column="1"
-                     Text="-90.0"/>
+                     Grid.Row="0" Grid.Column="1">
+                -90.0
+            </TextBox>
             <TextBox x:Name="MaxLat"
                      Margin="0,5,5,0"
                      Style="{StaticResource BlueTextbox}"
                      SelectionChanged="Extent_Changed"
-                     Grid.Row="0" Grid.Column="2"
-                     HorizontalAlignment="Left"
-                     Text="90.0"/>
+                     Grid.Row="0" Grid.Column="2">
+                90.0
+            </TextBox>
             <TextBox x:Name="MinLon"
                      Margin="0,5,5,0"
                      SelectionChanged="Extent_Changed"
                      Style="{StaticResource BlueTextbox}"
-                     Grid.Row="1" Grid.Column="1"
-                     Text="-180.0"/>
+                     Grid.Row="1" Grid.Column="1">
+                -180.0
+            </TextBox>
             <TextBox x:Name="MaxLon"
                      Margin="0,5,5,0"
                      Style="{StaticResource BlueTextbox}"
                      SelectionChanged="Extent_Changed"
-                     Grid.Row="1" Grid.Column="2"
-                     HorizontalAlignment="Left"
-                     Text="180.0"/>
+                     Grid.Row="1" Grid.Column="2">
+                180.0
+            </TextBox>
         </Grid>
 
-        <!-- Row 6 Date Picker -->
-        <StackPanel Grid.Row="6" Grid.Column="0"
+        <!-- Row 3 Date Panel -->
+        <StackPanel Grid.Row="3" Grid.Column="0"
                     Grid.ColumnSpan="2"
-                    Margin="0,15,0,25"
+                    Margin="0,10"
+                    HorizontalAlignment="Center"
+                    Orientation="Horizontal">
+
+            <Label Content="Date"
+                   VerticalAlignment="Center"
+                   Style="{StaticResource PanelLabel}" />
+            <TextBox x:Name="Date"
+                     Margin="5,5,0,10"
+                     HorizontalAlignment="Right"
+                     Style="{StaticResource BlueTextbox}">
+                01/01/2019
+            </TextBox>
+        </StackPanel>
+
+        <!-- Row 4- Resolution list selection -->
+        <StackPanel Grid.Row="4"
+                    Grid.Column="0"
                     Orientation="Horizontal"
-                    HorizontalAlignment="Center">
-            <StackPanel Orientation="Horizontal"
-                        HorizontalAlignment="Center">
-                <Label Content="Date"
-                       Style="{StaticResource PanelLabel}"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Center"/>
-                <Label Style="{StaticResource ElementLabel}"
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        VerticalAlignment="Center"
-                        HorizontalContentAlignment="Right"
-                        Content="(mm/dd/yyyy)">
-                </Label>
-        </StackPanel>
-
-        <DatePicker x:Name="AOI_Date"
-                    VerticalAlignment="Center"
-                    SelectedDate="01/01/2020"
-                    DisplayDateStart="01/01/2010"
-                    SelectedDateChanged="AOI_SelectedDateChanged">
-            </DatePicker>
-        </StackPanel>
-
-        <!-- Row 2- Resolution list selection -->
-        <Grid Grid.Row="2" Grid.Column="0"
-              Grid.ColumnSpan="2"
-              Margin="5">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="75"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-
-            <Label Content="Resolution"
-               Grid.Row="2" Grid.Column="0"
+                    HorizontalAlignment="Center"
+                    Grid.ColumnSpan="2">
+            <Label Content="Zoom Level"
                HorizontalAlignment="Right"
                VerticalAlignment="Center"
                Style="{StaticResource PanelLabel}"
@@ -306,11 +274,8 @@
 
             <ComboBox x:Name="ZoomCombo"
                   ItemsSource="{Binding}"
-                  Grid.Row="2" Grid.Column="1"
                   Width="115"
-                  Height="25"
                   Margin="5"
-                  VerticalContentAlignment="Center"
                   SelectedIndex="1"
                   SelectionChanged="Zoom_SelectionChanged"
                   HorizontalAlignment="Left">
@@ -321,86 +286,71 @@
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
-        </Grid>
-
-        <!-- Row 3, Column 0 - File Size -->
-        <StackPanel Grid.Row="3" Grid.Column="0"
-                    Orientation="Vertical"
-                    Margin="0,10,0,0"
-                    HorizontalAlignment="Center">
-            <Label Content="File Size"
-                   Style="{StaticResource PanelLabel}"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"/>
-            <TextBlock x:Name="RawSizeText"
-                       HorizontalAlignment="Center"
-                       Text="0 MB"/>
         </StackPanel>
-
-        <!-- Row 3, Column 1 - Min Pixel Size -->
-        <StackPanel Grid.Row="3" Grid.Column="1"
+        <StackPanel Grid.Row="5"
+                    Grid.Column="0"
+                    Margin="0,10"
                     Orientation="Vertical"
-                    Margin="0,10,0,0"
                     HorizontalAlignment="Center">
-            <Label Content="Minimum Pixel Size"
-                   Style="{StaticResource PanelLabel}"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"/>
-            <TextBlock x:Name="MinPixelSizeText"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
-                   Text="64 px x 64 px">
+            <Label Content="Raw Size"
+                    Style="{StaticResource PanelLabel}" />
+            <TextBlock x:Name="RawSizeText"
+                        HorizontalAlignment="Center">
+                125MB
             </TextBlock>
         </StackPanel>
 
-        <!-- Row 4, column 0 - Current Pixel Size -->
-        <StackPanel Grid.Row="4" Grid.Column="0"
+        <StackPanel Grid.Row="5"
+                Grid.Column="1"
+                Margin="0,10"
+                Orientation="Vertical"
+                HorizontalAlignment="Center">
+            <Label Content="Minimum"
+                Style="{StaticResource PanelLabel}"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"/>
+            <TextBlock HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
+            64 px x 64 px
+            </TextBlock>
+        </StackPanel>
+
+        <StackPanel Grid.Row="6"
+                    Grid.Column="0"
+                    Margin="0,0,0,20"
                     Orientation="Vertical"
-                    Margin="0,5,0,0"
                     HorizontalAlignment="Center">
-            <Label Content="Current Pixel Size"
-                   Style="{StaticResource PanelLabel}"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"/>
+            <Label Content="Pixel Size"
+                    Style="{StaticResource PanelLabel}" />
             <TextBlock x:Name="PixelSize"
-                       Margin="0,0,0,5"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       Text= "600 px x 600 px"/>
+                        HorizontalAlignment="Center">
+                600 px x 600 px
+            </TextBlock>
         </StackPanel>
 
-        <!-- Row 4, column 1 - Max Pixel Size -->
-        <StackPanel Grid.Row="4" Grid.Column="1"
+        <StackPanel Grid.Row="6"
+                    Grid.Column="1"
+                    Margin="0,0,0,10"
                     Orientation="Vertical"
-                    Margin="0,5,0,0"
                     HorizontalAlignment="Center">
-            <Label Content="Maximum Pixel Size"
-                   Style="{StaticResource PanelLabel}"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"/>
-            <TextBlock x:Name="MaxPixelSizeText"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       Text="8200 px x 8200 px"/>
+            <Label Content="Maximum"
+                    Style="{StaticResource PanelLabel}"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"/>
+            <TextBlock HorizontalAlignment="Center"
+                       VerticalAlignment="Center">
+                8200 px x 8200 px
+            </TextBlock>
         </StackPanel>
 
-
-        <!-- Row 8 - Save/download/back buttons -->
-        <Grid   Grid.Row="8"
-                Grid.Column="0"
-                Grid.ColumnSpan="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-
+        <!-- Row 7 - Save/download buttons -->
+        <!-- Save CheckBox -->
         <Button x:Name ="ItemSaveBtn"
+                Grid.Row="7"
                 Grid.Column="0"
-                HorizontalAlignment="Right"
+                HorizontalAlignment="Center"
                 VerticalAlignment="Center"
-                Margin="5,10"
-                Height="25"
+                Margin="5,15,5,10"
                 Width="70"
                 ToolTipService.PlacementRectangle="10,10,50,50"
                 ToolTipService.Placement="Left"
@@ -411,59 +361,53 @@
 
         <Button x:Name="CheckoutBtn"
                 Click="CheckoutBtn_Click"
+                Grid.Row="7"
                 Grid.Column="1"
                 Content="Review Cart"
-                HorizontalAlignment="Center"
                 VerticalAlignment="Center"
-                Height="25"
                 Width="70"
-                Margin="5,10"
+                Margin="5,15,5,10"
                 IsEnabled="False"
                 ToolTipService.PlacementRectangle="10,10,50,50"
                 ToolTipService.Placement="Left"
                 ToolTipService.HasDropShadow="True"
                 ToolTipService.ToolTip="Verify and download selections" />
 
+        <!-- Row 8 - BackToLayers/exit buttons -->
         <Button x:Name="ReturnBtn"
                 Click="ReturnBtn_Click"
-                Grid.Column="2"
-                Margin="5,10"
-                Height="25"
+                Grid.Row="8"
+                Grid.Column="0"
+                Margin="5"
                 Width="70"
-                VerticalAlignment="Center"
-                HorizontalAlignment="Left"
+                HorizontalAlignment="Center"
                 ToolTipService.PlacementRectangle="10,10,50,50"
                 ToolTipService.Placement="Left"
                 ToolTipService.HasDropShadow="True"
                 ToolTipService.ToolTip="Return to Layer selection window"
-                Content="Back" />
-        </Grid>
-        
-        <!-- Row 9 - Quit/Exit button -->
+                Content="Return" />
+
         <Button x:Name="ExitBtn"
                 Click="ExitBtn_Click"
-                Grid.Row="9"
-                Grid.Column="0"
-                Grid.ColumnSpan="2"
+                Grid.Row="8"
+                Grid.Column="1"
                 Width="70"
-                Height="25"
-                Margin="5,0,46.75,0"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
+                Margin="5"
+                HorizontalAlignment="Center"
                 ToolTipService.PlacementRectangle="10,10,50,50"
                 ToolTipService.Placement="Left"
                 ToolTipService.HasDropShadow="True"
                 ToolTipService.ToolTip="Exit QBasket Demo"
-                Content="Exit" />
-
-        <!-- Row 10 - Quartic Logo -->
+                Content="Quit" />
+        <!--
         <Image Source="QSolutions_small.png"
-                       Margin="0,30,10,5"
-                       Visibility="Collapsed"
-                       Height="24"
-                       Grid.Row="10"
-                       Grid.Column="1"
-                       HorizontalAlignment="Right"
-                       VerticalAlignment="Bottom" />
+                   Margin="0,5,5,5"
+                   Visibility="Collapsed"
+                   Height="24"
+                   Grid.Row="9"
+                   Grid.Column="0"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Bottom"/>
+-->
     </Grid>
-</Window>
+</UserControl>
